Add title and cards to the center-content div

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ ul{
     gap: 20px;
 }
 
-/* styling top content*/
+/* top content styling*/
 
 .top-content-bcolor{
     background-color: #1F2937;
@@ -106,3 +106,6 @@ ul{
     border-radius: 5px;
     padding: 5px 30px;
 }
+
+/* center content styling*/
+
