--- a/style.css
+++ b/style.css
@@ -109,3 +109,48 @@ ul{
 
 /* center content styling*/
 
+.center-content{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+}
+
+.center-content .title{
+    font-size: 36px;
+    color:#1F2937;
+    font-weight:900;
+    
+}
+
+.cards{
+    display: flex;
+    gap: 25px;
+}
+
+.cards .image-plh{
+    border: solid 3px #3882F6;
+    border-radius: 15px;
+    background-color: white;
+
+    min-width: 150px;
+    min-height: 150px;
+    flex: 0 1;
+}
+
+.cards div{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    gap: 10px;
+    font-size: 18px;
+    color: #1F2937;
+}
+
+.cards .subtext{
+    padding: 0px 20px;
+}
