--- a/style.css
+++ b/style.css
@@ -72,19 +72,20 @@ ul{
 .top-content{
     display: flex;
     padding: 100px 0;
-    gap: 15px;
+    gap: 25px;
 }
 
 .top-left-text{
     flex:1;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 25px;
 }
 
-.image-plh{
+.top-content .image-plh{
     flex:1;
     background-color: gray;
+    border-radius: 15px;
 }
 
 .top-left-text .one{
@@ -132,7 +133,7 @@ ul{
 }
 
 .cards .image-plh{
-    border: solid 3px #3882F6;
+    border: solid 5px #3882F6;
     border-radius: 15px;
     background-color: white;
 
