--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ ul{
     color: #E5E7EB;
 }
 
-.top-left-text button{
+button{
     background-color: #3882F6;
     width: fit-content;
     border: none;
@@ -116,7 +116,7 @@ ul{
     align-items: center;
     gap: 60px;
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 200px;
 
 }
 
@@ -154,4 +154,64 @@ ul{
 
 .cards .subtext{
     padding: 0px 20px;
+}
+
+/* quote styling*/
+
+.quote-bcolor{
+    background-color: #E5E7EB;
+}
+
+.quote{
+    font-size: 30px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight:300;
+    padding: 100px 110px;
+}
+
+.quote .author-quote{
+    font-size: 24px;
+    font-weight: 700;
+    font-style: normal;
+    text-align: right;
+    padding: 20px;
+}
+
+/* sign up window styling*/
+
+.sign-up-window-bcolor{
+    display: flex;
+    justify-content: center;
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+.sign-up-window{
+    display: flex;
+    background-color: #3882F6;
+    width: 900px;
+    height: 120px;
+    justify-content: center;
+    border-radius: 10px;
+    align-items: center;
+    padding: 0px 100px;
+    color:#F9FAF8;
+}
+
+.sign-up-window button{
+    border: solid 2px #F9FAF8 ;
+    color:#F9FAF8;
+    font-size: 15px;
+    padding: 10px 50px;
+}
+
+.sign-up-window-text{
+    flex: 1;
+}
+
+.sign-up-window-text .one{
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 5px;
 }
