--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@ button{
     align-items: center;
     padding: 0px 100px;
     color:#F9FAF8;
+    min-width: 500px;
 }
 
 .sign-up-window button{
